spacing bugfixes

--- a/assets/css/_sass/_default.scss
+++ b/assets/css/_sass/_default.scss
@@ -11,7 +11,7 @@
   text-decoration: underline;
 }
 .posts-wrapper {
-  padding-top: $header-thickness+10px;
+  padding-top: 10px;
   margin: auto;
   display: block;
   width: $container-width - 20px;
