--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -85,7 +85,7 @@ h2 span {
   width: 100%;
   background: white;
 }
-h3 {
+.whiteout h3 {
   text-align: center;
   margin: 0;
   margin-bottom: 1em;
